# backend/internal/handlers/raceplans/root.go
@@ -20,4 +20,6 @@ func (h *RacePlanHandler) RegisterHandlers(api *operations.SharplAPIAPI) {
 	api.RacePlansGetRacePlansHandler = race_plans.GetRacePlansHandlerFunc(h.GetRacePlans)
 	api.RacePlansGetRacePlanHandler = race_plans.GetRacePlanHandlerFunc(h.GetRacePlan)
 	api.RacePlansFilterRacePlansHandler = race_plans.FilterRacePlansHandlerFunc(h.FilterRacePlans)
+	api.RacePlansEnrollInRacePlanHandler = race_plans.EnrollInRacePlanHandlerFunc(h.EnrollInRacePlan)
+	api.RacePlansGetMyEnrollmentsHandler = race_plans.GetMyEnrollmentsHandlerFunc(h.GetMyEnrollments)
 }
